--- a/iron-pulse-rect/src/pages/workout-select.css
+++ b/iron-pulse-rect/src/pages/workout-select.css
@@ -23,4 +23,12 @@
   .mb-4 {
     margin-bottom: 1.5rem;
   }
+
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px; /* Adjust the gap value to change the spacing between the cards */
+  }
+  
   
